--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -9,9 +9,9 @@
 	<ul class="flex b grey-3">
 		<li><a href="/products" class="pa3 no-underline db">Music</a></li>
 
-		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
+		<li><a href="/values" class="pa3 no-underline db">Gallery</a></li>
 
-		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
+		<li><a href="/post" class="pa3 no-underline db">Upcoming Events</a></li>
 
 		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
 	</ul>
