--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -7,7 +7,7 @@
 
 		</div>
 
-		<div class="flex-ns justify-around">
+		<div class="flex-ns justify-between">
 
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">No Vacancy</h3>
