--- a/site/layouts/section/contact.html
+++ b/site/layouts/section/contact.html
@@ -7,7 +7,7 @@
 
 		{{ .Content }}
 
-		<div class="flex-2 mb3">
+		<div class="flex-ns justify-between mb3">
 	        	{{ range .Params.contact_entries }}
 				<div>
 					<h4 class="f4 b lh-title mb2 primary">{{ .heading }}</h4>
