--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -15,11 +15,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
 
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="/img/No Vacancy NV.jpg" sizes="32x32">
-	<link rel="icon" type="image/png" href="/img/No Vacancy NV.jpg" sizes="16x16">
+	<link rel="apple-touch-icon" sizes="180x180" href="/img/IMG_2300 (1).JPG">
+	<link rel="icon" type="image/jpg" href="/img/No Vacancy NV.jpg" sizes="32x32">
+	<link rel="icon" type="image/jpg" href="/img/No Vacancy NV.jpg" sizes="16x16">
 	<link rel="manifest" href="/manifest.json">
-	<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#ff4400">
+	<link rel="mask-icon" href="/img/No Vacancy NV.jpg" >
 	<meta name="theme-color" content="#fff">
 
 	<!-- Open Graph -->
