--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -14,7 +14,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
 
-	<!-- Favicons -->
+	<-- Favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="/img/IMG_2300 (1).JPG">
 	<link rel="icon" type="image/jpg" href="/img/No Vacancy NV.jpg" sizes="32x32">
 	<link rel="icon" type="image/jpg" href="/img/No Vacancy NV.jpg" sizes="16x16">
@@ -22,7 +22,7 @@
 	<link rel="mask-icon" href="/img/No Vacancy NV.jpg" >
 	<meta name="theme-color" content="#fff">
 
-	<!-- Open Graph -->
+	<-- Open Graph -->
 	<meta property="og:type" content="business.business">
 	<meta property="og:title" content="No Vacancy">
 	<meta property="og:url" content="/">
